# rust-aoc-2022

./: README.md
aoc/: Cargo.toml
aoc/src/: day1.rs  day2.rs  day3.rs  day4.rs  main.rs
deep-dives/: Cargo.toml
deep-dives/A-structs-enums/: Cargo.toml
deep-dives/A-structs-enums/src/: iflet.rs  main.rs  shape.rs
deep-dives/B-str-slices/: Cargo.toml
deep-dives/B-str-slices/src/: main.rs
deep-dives/C-errors-collections/: Cargo.toml
deep-dives/C-errors-collections/src/: main.rs
deep-dives/D-generics-traits/: Cargo.toml
deep-dives/D-generics-traits/src/: main.rs
deep-dives/E-ownership/: Cargo.toml
deep-dives/E-ownership/src/: main.rs
deep-dives/F-slices/: Cargo.toml
deep-dives/F-slices/src/: main.rs
deep-dives/G-concurrency/: Cargo.toml
deep-dives/G-concurrency/src/: main.rs
deep-dives/H-cargo-crates/: Cargo.toml
deep-dives/H-cargo-crates/src/: main.rs
deep-dives/I-macros/: Cargo.toml
deep-dives/I-macros/src/: main.rs
deep-dives/J-closures/: Cargo.toml
deep-dives/J-closures/src/: main.rs
deep-dives/K-async-internals/: Cargo.toml
deep-dives/K-async-internals/src/: main.rs
src/: main.rs
