[package]
name = "G-concurrency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
futures = "0.3.28"
rayon = "1.7.0"
reqwest = { version = "0.11.18", features = ["blocking"] }
serde = { version = "1.0.177", features = ["derive"] }
serde_json = "1.0.104"
tokio = "1.29.1"
